--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,45 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+
+# ============== #
+# Unity packages #
+# ============== #
+*.unitypackage
+*.unitypackage.meta
+/[Pp]ackages/packages-lock.json
+
+# ====== #
+# Builds #
+# ====== #
+/[Bb]uild/
+/[Bb]uilds/
+*.apk
+*.apk.meta
+*.ipa
+*.ipa.meta
+
+# ============= #
+# IDE generated #
+# ============= #
+/.vscode/
+/.idea/
+/[Aa]ssets/Plugins/Editor/JetBrains/
+/[Aa]ssets/Plugins/Editor/JetBrains.meta
+ 
+# ================== #
+# OS generated files #
+# ================== #
+.DS_Store*
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+[Tt]humbs.db
+[Dd]esktop.ini
+
+*.csproj.meta
+
+ScreenshotsUnity/
+Recordings
+UserSettings
